--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -4,3 +4,19 @@
 // 
 
 // Add extra styles here
+
+//Styles for /includes/user-bar.html
+
+ul#navigation {
+    font-size: 0.9em;
+    margin-top: 15px;
+    text-align: right;
+    font-family: 'GDS Transport', Arial, Helvetica, sans-serif;
+    display: block;    
+    li {
+      display: inline;
+      font-size: 16px;
+      overflow-wrap: break-word;
+      a {margin-left: 0.9em;}
+    }
+  }
