--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,13 +7,40 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    {% include "govuk-prototype-kit/includes/homepage-top.njk" %}
 
-    <h1 class="govuk-heading-xl">
+    <h1 class="govuk-heading-l">
       {{ serviceName }}
     </h1>
 
-    {% include "govuk-prototype-kit/includes/homepage-bottom.njk" %}
+    {{ govukWarningText({
+      text: "This prototype is being actively worked on - things might break or change very quickly",
+      iconFallbackText: "Warning"
+    }) }}
+
+    <h2 class="govuk-heading-m">Design:</h2>
+    <ul class="govuk-list govuk-list--bullet">
+      <li><a href="https://app.mural.co/t/companieshouse8589/m/companieshouse8589/1699962904188/3175e02991cb480374fc46cb8f4d16152ae41996?wid=0-1700062229423" class="govuk-link">Service design (in Mural)</a></li>
+    </ul>
+
+    <h2 class="govuk-heading-m">Shortcuts:</h2>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="start" class="govuk-link">Start</a></li>
+        <li><a href="accessibility-statement" class="govuk-link">Accessibility statement</a></li>
+        <li><a href="sign-in" class="govuk-link">Sign in</a></li>
+        <li><a href="sign-out" class="govuk-link">Sign out</a></li>
+        <li><a href="enter-your-address" class="govuk-link">Enter your address</a></li>
+        <li><a href="check-your-answers" class="govuk-link">Check your answers</a></li>
+        <li><a href="generate-new-code#" class="govuk-link">Generate new code</a></li>
+        <li><a href="confirmation" class="govuk-link">Application complete</a></li>
+      </ul>
+
+    <h2 class="govuk-heading-s">Emails:</h2>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="/email/received-email" class="govuk-link">Application received</a></li>
+        <li><a href="/email/accepted-email" class="govuk-link">Application accepted</a></li>
+        <li><a href="/email/rejected-email" class="govuk-link">Application rejected</a></li>
+      </ul>
+
   </div>
 </div>
 
