--- a/app/views/generate-new-code.html
+++ b/app/views/generate-new-code.html
@@ -16,17 +16,39 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">Generate a new code</h1>
-
-      <p class="govuk-body">**Content here**</p>
-
-      {{ govukButton({
-          text: "Continue",
-          href: "confirmation"
-        }) }}
+      <form class="form" action="/enter-your-address" method="post">
 
 
+            {{ govukRadios({
+              classes: "govuk-radios--inline",
+              name: "newCode",
+              fieldset: {
+                legend: {
+                  text: "Do you want to generate a new code?",
+                  isPageHeading: true,
+                  classes: "govuk-fieldset__legend--xl"
+                }
+              },
+              hint: {
+                text: "**Content here?**"
+              },
+              items: [
+                {
+                  value: "yes",
+                  text: "Yes"
+                },
+                {
+                  value: "no",
+                  text: "No"
+                }
+              ]
+            }) }}
 
+            {{ govukButton({
+              text: "Continue"
+            }) }}
+
+      </form>
       </div>
     </div>
 
