Added Name field

--- a/app/views/generate-new-code.html
+++ b/app/views/generate-new-code.html
@@ -16,7 +16,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="/enter-your-address" method="post">
+      <form class="form" action="/enter-your-details" method="post">
 
 
             {{ govukRadios({
