--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -22,6 +22,23 @@
       {{ govukSummaryList({
         classes: "govuk-!-margin-bottom-9",
         rows: [
+           {
+            key: {
+              text: "Full name"
+            },
+            value: {
+               text: data['fullName']
+            },
+            actions: {
+              items: [
+                {
+                  href: "enter-your-details",
+                  text: "Change",
+                  visuallyHiddenText: "full name"
+                }
+              ]
+            }
+          },
           {
             key: {
               text: "Address"
@@ -32,7 +49,7 @@
             actions: {
               items: [
                 {
-                  href: "enter-your-address",
+                  href: "enter-your-details",
                   text: "Change",
                   visuallyHiddenText: "address"
                 }
