--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,7 +28,7 @@
         <li><a href="accessibility-statement" class="govuk-link">Accessibility statement</a></li>
         <li><a href="sign-in" class="govuk-link">Sign in</a></li>
         <li><a href="sign-out" class="govuk-link">Sign out</a></li>
-        <li><a href="enter-your-address" class="govuk-link">Enter your address</a></li>
+        <li><a href="enter-your-details" class="govuk-link">Enter your details</a></li>
         <li><a href="check-your-answers" class="govuk-link">Check your answers</a></li>
         <li><a href="generate-new-code#" class="govuk-link">Generate new code</a></li>
         <li><a href="confirmation" class="govuk-link">Application complete</a></li>
