--- a/app/views/sign-in.html
+++ b/app/views/sign-in.html
@@ -21,7 +21,7 @@
 
       <h1 class="govuk-heading-xl">Sign in to Companies House</h1>
       <p class="govuk-hint-text">You cannot use your WebFiling details to sign in. You must sign in to or register a Companies House account.</p>
-      <form action="/enter-your-address" method="post">
+      <form action="/enter-your-details" method="post">
 
 
           {{ govukInput({
