--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -21,7 +21,7 @@
       <div class="govuk-panel govuk-panel--confirmation">
         <h1 class="govuk-panel__title">Application submitted</h1>
         <div class="govuk-panel__body">
-          **content here?**
+          Your application reference is: <strong>ZZ354354</strong>
         </div>
       </div>
       <p>
@@ -30,11 +30,25 @@
       </p>
       <h2 class="govuk-heading-m">What happens next</h2>
 
-      <p class="govuk-body">**Content here**</p>
-     
+      <p class="govuk-body">We’ll process your application and email to let you know if it’s been accepted or rejected. This can take up to 5 working days. </p>
+
+
+           <h2 class="govuk-heading-m">If your application is accepted</h2>
+
+          <p>We’ll send an email with your: </p>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>presenter ID</li>
+            <li>credit account number (if relevant)</li>
+            <li>presenter code </li>
+          </ul>
+
+        <p>You will need some or all of these for electronic filings. </p>
+
+           <h2 class="govuk-heading-m">If your application is rejected</h2>
+      <p>We'll email you to explain what to do next.</p>
       <p>
         <a href="https://www.smartsurvey.co.uk/s/fileconfstmnt-feedback/">What did you think of this service?</a>
-        (takes 2 minutes)
+        (takes around 2 minutes to complete)
       </p>
 
           </div>
