--- a/app/views/email/accepted-email.html
+++ b/app/views/email/accepted-email.html
@@ -127,17 +127,21 @@
         <tr>
           <td colspan="2">
             <br>
-            <p>Your confirmation statement for HAPPY HOUSE LTD has been accepted.</p>
+            <p>Your application for an online presenter account has been accepted. You can now file documents electronically. </p>
             <br>
             </td>
             </tr>
           <tr>
             <td colspan="2">
               <p>
-                <h2 class="govuk-heading-m">What happens next</h2>
-                <p>The confirmation statement has been added to the company’s filing history on the <a href="https://find-and-update.company-information.service.gov.uk/">Companies House register.</a></p>
-                <p>Use your reference number if you need to contact Companies House about this filing.</p>
-                <p>Your next confirmation statement is due 31 July 2022.</p>
+                <h2 class="govuk-heading-m">Your presenter account details</h2>
+                                <p>Keep these codes safe and do not share them with anyone outside of your organisation. </p>
+
+                <p>Your presenter ID: <strong>WJ07-555</strong></p>
+                <p>Your credit account number: <strong>555567685</strong></p>
+                <p>Your presenter code: <strong>444 5365</strong></p>
+
+ 
                 <p>
                   <a href="https://www.research.net">What did you think of this service?</a>
                   (takes 2 minutes)</p>
