--- a/app/views/enter-your-details.html
+++ b/app/views/enter-your-details.html
@@ -21,7 +21,7 @@
 
             {% call govukFieldset({
               legend: {
-                text: "Enter your details",
+                text: "Tell us your details",
                 classes: "govuk-fieldset__legend--l",
                 isPageHeading: true
               }
