--- a/app/views/generate-new-code.html
+++ b/app/views/generate-new-code.html
@@ -24,13 +24,13 @@
               name: "newCode",
               fieldset: {
                 legend: {
-                  text: "Do you want to generate a new code?",
+                  text: "Do you need a new presenter code?",
                   isPageHeading: true,
                   classes: "govuk-fieldset__legend--xl"
                 }
               },
               hint: {
-                text: "**Content here?**"
+                text: "You already have a presenter account."
               },
               items: [
                 {
