--- a/app/views/start.html
+++ b/app/views/start.html
@@ -24,17 +24,26 @@
         {% endif %}
       </h1>
 
-      <p class="govuk-body-l">**Content here**</p>
-      <p class="govuk-body govuk-!-font-weight-bold">Use this service to:</p>
+     <!-- <p class="govuk-body-l">**Content here**</p> -->
+      <p class="govuk-body">Use this service to apply for an online filing presenter account.</p>
+            <p class="govuk-body">If you already have a presenter account, you can use this service to request a new presenter code. </p>
+
+  <p class="govuk-body">You need an online filing presenter account to file (any of the following): </p>
+
       <ul class="govuk-list govuk-list--bullet">
-        <li>**content here**</li>
-        <li>**content here**</li>
+        <li>using third-party software</li>
+        <li>online and pay filing fees by credit account, rather than by credit or debit card</li>
       </ul>
-         <p class="govuk-body govuk-!-font-weight-bold">You cannot use this service to...</p>
+
+      <h2 class="govuk-heading-m">What you'll need</h2>
+         <p class="govuk-body">You'll need to:</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li>**content here**</li>
-        <li>**content here**</li>
+        <li>sign in or create a Companies House account</li>
+        <li>tell us your details</li>
+
       </ul>
+    <p>It takes around 5 minutes to apply.</p>
+
 
       {{ govukButton({
           text: "Start now",
