--- a/app/views/email/received-email.html
+++ b/app/views/email/received-email.html
@@ -127,7 +127,9 @@
         <tr>
           <td colspan="2">
             <br>
-            <p>You have submitted a confirmation statement for HAPPY HOUSE LTD</p>
+            <p>We’ve received you’re application for an online filing presenter account.</p>
+            <p>You application reference is: <strong>ZZ354354</strong>
+</p>
             <br>
             </td>
             </tr>
@@ -135,13 +137,10 @@
             <td colspan="2">
               <p>
                 <h2 class="govuk-heading-m">What happens next</h2>
-                <p>We will email you within 2 working days to let you know if your confirmation statement has been accepted.</p>
-                <p>Your confirmation statement will then be posted on the <a href="https://find-and-update.company-information.service.gov.uk/">Companies House register.</a></p>
-                <p>Use your reference number if you need to contact Companies House about your filing.</p>
-                <!--{% if paymentOptions === 'card' %}-->
-                  <p>If you need to contact us about your payment, use the payment reference number
-                    <strong>YU42981150</strong>.</p>
-                <!--{% endif %}-->
+                <p>
+We’ll process your application and email to let you know if it’s been accepted or rejected. This can take up to 5 working days.
+</p>
+        
                 <p>
                   <a href="https://www.research.net">What did you think of this service?</a>
                   (takes 2 minutes)</p>
