--- a/app/views/email/accepted-email.html
+++ b/app/views/email/accepted-email.html
@@ -127,7 +127,7 @@
         <tr>
           <td colspan="2">
             <br>
-            <p>Your application for an online presenter account has been accepted. You can now file documents electronically. </p>
+            <p>Your application for an online filing presenter account has been accepted.  </p>
             <br>
             </td>
             </tr>
@@ -135,13 +135,17 @@
             <td colspan="2">
               <p>
                 <h2 class="govuk-heading-m">Your presenter account details</h2>
-                                <p>Keep these codes safe and do not share them with anyone outside of your organisation. </p>
 
                 <p>Your presenter ID: <strong>WJ07-555</strong></p>
-                <p>Your credit account number: <strong>555567685</strong></p>
                 <p>Your presenter code: <strong>444 5365</strong></p>
 
- 
+                <p>Keep these codes secure and do not share them. You will need to use these to file online using third-party software. </p>
+
+
+                <p>Read our guidance if you need help to <a href="https://www.gov.uk/company-filing-software" class="govuk-link">find software for filing company documents</a>. 
+
+                 <h3 class="govuk-heading-s">Your feedback</h3>
+
                 <p>
                   <a href="https://www.research.net">What did you think of this service?</a>
                   (takes 2 minutes)</p>
