--- a/app/views/email/rejected-email.html
+++ b/app/views/email/rejected-email.html
@@ -128,22 +128,18 @@
         <tr>
           <td colspan="2">
             <br>
-            <p>We have rejected your confirmation statement for HAPPY HOUSE LTD because:</p>
-<ul class="govuk-list--bulletlist">
-  <li>reject reason.
-  </li>
-</ul>
+            <p>Your application for an online presenter filing account has been rejected. There was a problem with the address you provided on your application form. </p>
+
             <br>
             </td>
             </tr>
           <tr>
             <td colspan="2">
               <p>
-                <h2 class="govuk-heading-m">What happens next</h2>
-                <p>You will need to resolve these issues and file the confirmation statement again.</p>
+                <h2 class="govuk-heading-m">What to do next</h2>
+                <p>You can <a href="" class="govuk-link">submit a new application</a> with a different address or contact Companies House for more information.</p>
                 <p>Use your reference number if you need to contact Companies House about your filing.</p>
 
-                  <p>If you paid a fee for this filing, you will be automatically refunded. If you have not received a refund within 10 working days, <a href="">contact Companies House</a>.</p>
 
                 <p>
                   <a href="https://www.research.net">What did you think of this service?</a>
