--- a/app/views/start.html
+++ b/app/views/start.html
@@ -25,24 +25,29 @@
       </h1>
 
      <!-- <p class="govuk-body-l">**Content here**</p> -->
-      <p class="govuk-body">Use this service to apply for an online filing presenter account.</p>
-            <p class="govuk-body">If you already have a presenter account, you can use this service to request a new presenter code. </p>
+      <p class="govuk-body">Use this service to apply for a presenter account to file online with Companies House using third-party software.</p>
+      
+   <!--   <p class="govuk-body">If you already have a presenter account, you can use this service to request a new presenter ID and code. <a href="https://www.gov.uk/contact-companies-house" class="govuk-link">Contact Companies House</a> if you think your details have been shared or compromised.</p>  -->
 
-  <p class="govuk-body">You need an online filing presenter account to file (any of the following): </p>
+  <p class="govuk-body">You can only use a presenter account to file documents without a fee. You will need to <a href="https://apply-presenter-prototype-8bf1efc0699b.herokuapp.com/start" class="govuk-link">complete an application form</a> if you need to apply:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>using third-party software</li>
-        <li>online and pay filing fees by credit account, rather than by credit or debit card</li>
+        <li>for a presenter credit account to file documents with a fee</li>
+        <li>to register as a lender to file electronic charge documents</li>
       </ul>
 
-      <h2 class="govuk-heading-m">What you'll need</h2>
+
+
+    <!--  <h2 class="govuk-heading-m">What you'll need</h2>
          <p class="govuk-body">You'll need to:</p>
       <ul class="govuk-list govuk-list--bullet">
         <li>sign in or create a Companies House account</li>
         <li>tell us your details</li>
 
-      </ul>
-    <p>It takes around 5 minutes to apply.</p>
+      </ul>  -->
+
+
+    <p>It takes around 5 minutes to apply. You'll need to sign in or create a Companies House account to use this service. </p>
 
 
       {{ govukButton({
