--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -38,11 +38,10 @@
           <p>We’ll send an email with your: </p>
           <ul class="govuk-list govuk-list--bullet">
             <li>presenter ID</li>
-            <li>credit account number (if relevant)</li>
             <li>presenter code </li>
           </ul>
 
-        <p>You will need some or all of these for electronic filings. </p>
+        <p>You must keep your ID and code secure. You will need them for online filings. </p>
 
            <h2 class="govuk-heading-m">If your application is rejected</h2>
       <p>We'll email you to explain what to do next.</p>
