--- a/app/views/start.html
+++ b/app/views/start.html
@@ -27,6 +27,8 @@
      <!-- <p class="govuk-body-l">**Content here**</p> -->
       <p class="govuk-body">Use this service to apply for a presenter account to file online with Companies House using third-party software.</p>
       
+     <p>If you lose your presenter account details, use this service to apply for a new account.</p> 
+      <!--<p>You can also use this service to apply for a new account if you’ve lost your existing presenter account details. </p>-->
    <!--   <p class="govuk-body">If you already have a presenter account, you can use this service to request a new presenter ID and code. <a href="https://www.gov.uk/contact-companies-house" class="govuk-link">Contact Companies House</a> if you think your details have been shared or compromised.</p>  -->
 
   <p class="govuk-body">You can only use a presenter account to file documents without a fee. You will need to <a href="https://apply-presenter-prototype-8bf1efc0699b.herokuapp.com/start" class="govuk-link">complete an application form</a> if you need to apply:</p>
@@ -55,6 +57,10 @@
           href: "sign-in",
           isStartButton: true
         }) }}
+
+
+     <!-- <h2 class="govuk-heading-m govuk-!-margin-bottom-2">If you lose your presenter account details</h2>
+      <p>Use this service to apply for a new account.</p> -->
 
       <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Help</h2>
 
