--- a/app/views/email/accepted-email.html
+++ b/app/views/email/accepted-email.html
@@ -139,10 +139,14 @@
                 <p>Your presenter ID: <strong>WJ07-555</strong></p>
                 <p>Your presenter code: <strong>444 5365</strong></p>
 
-                <p>Keep these codes secure and do not share them. You will need to use these to file online using third-party software. </p>
+                <p>Keep these codes secure and do not share them. You will need them to file online using third-party software. </p>
 
 
                 <p>Read our guidance if you need help to <a href="https://www.gov.uk/company-filing-software" class="govuk-link">find software for filing company documents</a>. 
+
+                <h3 class="govuk-heading-s">If you need to request a new presenter ID or code</h3>
+
+                <p>You will need to <a href="../start" class="govuk-link">apply for a new online filing presenter account</a>.</p>
 
                  <h3 class="govuk-heading-s">Your feedback</h3>
 
