--- a/app/views/email/accepted-email.html
+++ b/app/views/email/accepted-email.html
@@ -144,10 +144,10 @@
 
                 <p>Read our guidance if you need help to <a href="https://www.gov.uk/company-filing-software" class="govuk-link">find software for filing company documents</a>. 
 
-                <h3 class="govuk-heading-s">If you need to request a new presenter ID or code</h3>
+          <!--      <h3 class="govuk-heading-s">If you need to request a new presenter ID or code</h3>
 
                 <p>You will need to <a href="../start" class="govuk-link">apply for a new online filing presenter account</a>.</p>
-
+-->
                  <h3 class="govuk-heading-s">Your feedback</h3>
 
                 <p>
