--- a/app/views/email/rejected-email.html
+++ b/app/views/email/rejected-email.html
@@ -137,13 +137,15 @@
             <td colspan="2">
               <p>
                 <h2 class="govuk-heading-m">What to do next</h2>
-                <p>You can <a href="" class="govuk-link">submit a new application</a> with a different address or contact Companies House for more information.</p>
-                <p>Use your reference number if you need to contact Companies House about your filing.</p>
+                <p>You can <a href="" class="govuk-link">submit a new application</a> if the address you gave was incorrect.</p> 
+                
+                <p><a href="" class="govuk-link">Contact Companies House</a> if you have any questions about your application.</p>
+              
 
 
                 <p>
-                  <a href="https://www.research.net">What did you think of this service?</a>
-                  (takes 2 minutes)</p>
+            <!--      <a href="https://www.research.net">What did you think of this service?</a>
+                  (takes 2 minutes)</p> -->
                 <p>
                   <b>This email was sent from a notification-only email address which cannot accept incoming mail. Please do not reply directly to this message.</b>
                 </p>
