Remove feedback survey link
Removed survey link from confirmation page and accepted email

--- a/app/views/email/accepted-email.html
+++ b/app/views/email/accepted-email.html
@@ -148,11 +148,11 @@
 
                 <p>You will need to <a href="../start" class="govuk-link">apply for a new online filing presenter account</a>.</p>
 -->
-                 <h3 class="govuk-heading-s">Your feedback</h3>
+             <!--    <h3 class="govuk-heading-s">Your feedback</h3>
 
                 <p>
                   <a href="https://www.research.net">What did you think of this service?</a>
-                  (takes 2 minutes)</p>
+                  (takes 2 minutes)</p> -->
                 <p>
                   <b>This email was sent from a notification-only email address which cannot accept incoming mail. Please do not reply directly to this message.</b>
                 </p>
