--- a/app/views/start.html
+++ b/app/views/start.html
@@ -37,7 +37,7 @@
   <div class="govuk-details__text">
   <p>You'll need to use this service to apply for a new account.</p>
 
-  <p>You must <a href="https://www.gov.uk/contact-companies-house" class="govuk-link">contact us</a> to report if you think someone else has access to or knows your presenter account details. </p>
+  <p>You must <a href="https://www.gov.uk/contact-companies-house" class="govuk-link">contact us</a> to report if you think someone else knows, or has access to your presenter account details. </p>
 
   </div>
 </details>
