--- a/app/views/start.html
+++ b/app/views/start.html
@@ -25,7 +25,7 @@
       </h1>
 
      <!-- <p class="govuk-body-l">**Content here**</p> -->
-      <p class="govuk-body">Use this service to apply for a presenter account to file online with Companies House using third-party software.</p>
+      <p class="govuk-body">Use this service to apply for a presenter account to file online with Companies House using third-party software. You can only use a presenter account to file documents without a fee.</p>
       
 
       <details class="govuk-details" data-module="govuk-details">
@@ -37,35 +37,31 @@
   <div class="govuk-details__text">
   <p>You'll need to use this service to apply for a new account.</p>
 
-  <p>You must <a href="https://www.gov.uk/contact-companies-house" class="govuk-link">contact us</a> to report if you think someone else knows, or has access to your presenter account details. </p>
+  <p>You must <a href="https://www.gov.uk/contact-companies-house" class="govuk-link">contact us</a> if you think someone else knows, or has access to your presenter account details. </p>
 
   </div>
 </details>
     
     
-    <!-- <p>If you lose your presenter account details, use this service to apply for a new account.</p> -->
-      <!--<p>You can also use this service to apply for a new account if you’ve lost your existing presenter account details. </p>-->
-   <!--   <p class="govuk-body">If you already have a presenter account, you can use this service to request a new presenter ID and code. <a href="https://www.gov.uk/contact-companies-house" class="govuk-link">Contact Companies House</a> if you think your details have been shared or compromised.</p>  -->
 
-  <p class="govuk-body">You can only use a presenter account to file documents without a fee. You <strong>cannot</strong> use this service to:</p>
+
+ <!--OPT 1 -->
+ <p class="govuk-body"><strong>You cannot use this service to:</strong></p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>apply for a presenter credit account to file documents with a fee</li>
         <li>register as a lender to file electronic charge documents</li>
       </ul>
 
-<p>For these, you will need to <a href="https://apply-presenter-prototype-8bf1efc0699b.herokuapp.com/start" class="govuk-link">complete an application form</a>.</p>
+<p>For these, you will need to <a href="https://apply-presenter-prototype-8bf1efc0699b.herokuapp.com/start" class="govuk-link">complete an application form</a>.</p> 
 
-    <!--  <h2 class="govuk-heading-m">What you'll need</h2>
-         <p class="govuk-body">You'll need to:</p>
-      <ul class="govuk-list govuk-list--bullet">
-        <li>sign in or create a Companies House account</li>
-        <li>tell us your details</li>
-
-      </ul>  -->
+<!--opt2 
+<p>You cannot use this service if you need to file documents with a fee, or file electronic charge documents. For these, you’ll need to <a href="https://apply-presenter-prototype-8bf1efc0699b.herokuapp.com/start" class="govuk-link">complete an application form</a> to apply for a presenter account, or register as a lender.</p> -->
 
 
-    <p>It takes around 5 minutes to apply. You'll need to sign in or create a Companies House account to use this service. </p>
+
+
+    <p>You'll need to sign in or create a Companies House account to use this service. It takes around 5 minutes to apply. </p>
 
 
       {{ govukButton({
