--- a/app/views/enter-your-details.html
+++ b/app/views/enter-your-details.html
@@ -42,7 +42,7 @@
 
 
            <h2 class="govuk-heading-m govuk-!-margin-bottom-1">Correspondence address</h2>
-            <p class="govuk-hint">We’ll use this to contact you if there’s a problem with your account. </p>
+            <p class="govuk-hint">We’ll use this to contact you about your account. </p>
                           
 
             <div class="govuk-form-group">
@@ -114,7 +114,7 @@
 
             <div class="govuk-form-group">
               <label class="govuk-label" for="address-postcode">
-                Postcode
+                Postcode or zip code
               </label>
 
             <input class="govuk-input govuk-input--width-10" id="address-postcode" name="addressPostcode" type="text" autocomplete="postal-code">
