--- a/app/views/check-your-answers.html
+++ b/app/views/check-your-answers.html
@@ -16,7 +16,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
 
-      <h1 class="govuk-heading-l">Check your answers</h1>
+      <h1 class="govuk-heading-l">Check your answers before submitting your application</h1>
 
 
       {{ govukSummaryList({
