--- a/app/views/confirmation.html
+++ b/app/views/confirmation.html
@@ -20,22 +20,15 @@
 
       <div class="govuk-panel govuk-panel--confirmation">
         <h1 class="govuk-panel__title">Application submitted</h1>
-        <div class="govuk-panel__body">
-          Your application reference is: <strong>ZZ354354</strong>
-        </div>
+
       </div>
-      <p>
-        We have sent a confirmation email to
-        <span class="govuk-!-font-weight-bold">{{ data['email'] }}</span>.
-      </p>
+
       <h2 class="govuk-heading-m">What happens next</h2>
 
-      <p class="govuk-body">We’ll process your application and email to let you know if it’s been accepted or rejected. This can take up to 5 working days. </p>
+      <p class="govuk-body">We’ll create your presenter account. We’ll send an email to <span class="govuk-!-font-weight-bold">{{ data['email'] }}</span> with your:</p>
 
 
-           <h2 class="govuk-heading-m">If your application is accepted</h2>
 
-          <p>We’ll send an email with your: </p>
           <ul class="govuk-list govuk-list--bullet">
             <li>presenter ID</li>
             <li>presenter code </li>
@@ -43,8 +36,8 @@
 
         <p>You must keep your ID and code secure. You will need them for online filings. </p>
 
-           <h2 class="govuk-heading-m">If your application is rejected</h2>
-      <p>We'll email you to explain what to do next.</p>
+<!--           <h2 class="govuk-heading-m">If your application is rejected</h2>
+      <p>We'll email you to explain what to do next.</p> -->
      <!-- <p>
         <a href="https://www.smartsurvey.co.uk/s/fileconfstmnt-feedback/">What did you think of this service?</a>
         (takes around 2 minutes to complete)
