--- a/app/views/filter.html
+++ b/app/views/filter.html
@@ -31,15 +31,18 @@
           items: [
             {
               value: "no-fee",
-              text: "Apply for a presenter credit account to file documents without a fee"
+              html: 'Apply for a presenter credit account to file documents <span class="govuk-!-font-weight-bold">without a fee</span>'
+            },
+            {
+                divider: "or"
             },
             {
               value: "fee",
-              text: "Apply for a presenter credit account to file documents with a fee"
+              html: 'Apply for a presenter credit account to file documents <span class="govuk-!-font-weight-bold">with a fee</span>'
             },
             {
               value: "charges",
-              text: "Register as a lender to file electronic charge documents"
+              html: "Register as a lender to file electronic charge documents"
             }
           ]
         }) }}
