--- a/app/views/filter.html
+++ b/app/views/filter.html
@@ -20,7 +20,7 @@
       <form class="form" action="/filter" method="post">
 
     {{ govukRadios({
-          name: "whereDoYouLive",
+          name: "filter",
           fieldset: {
             legend: {
               text: "What do you want to do?",
