--- a/app/views/stop.html
+++ b/app/views/stop.html
@@ -19,14 +19,14 @@
 
       <form class="form" action="/filter" method="post">
 
-     <h1 class="govuk-heading-l">You cannot use this service to:</h1>
+     <h1 class="govuk-heading-l">You cannot use this service</h1>
+
+     <p class="govuk-body">You will need to <a href="https://apply-presenter-prototype-8bf1efc0699b.herokuapp.com/start" class="govuk-link">complete an application form</a> to:</p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>apply for a presenter credit account to file documents with a fee</li>
         <li>register as a lender to file electronic charge documents</li>
       </ul>
-
-<p>For these, you will need to <a href="https://apply-presenter-prototype-8bf1efc0699b.herokuapp.com/start" class="govuk-link">complete an application form</a>.</p> 
 
       </div>
     </div>
