--- a/app/views/start.html
+++ b/app/views/start.html
@@ -74,9 +74,8 @@
      <!-- <h2 class="govuk-heading-m govuk-!-margin-bottom-2">If you lose your presenter account details</h2>
       <p>Use this service to apply for a new account.</p> -->
 
-      <h2 class="govuk-heading-m govuk-!-margin-bottom-2">Help</h2>
 
-      <p class="govuk-body"><a href="https://mcmw.abilitynet.org.uk/" class="govuk-link">AbilityNet has advice on making your device easier to use</a> - for example, changing colours or text size.</p>
+      <p class="govuk-body"><a href="https://mcmw.abilitynet.org.uk/" class="govuk-link">Read advice from AbilityNet on how to adapt your device to meet your needs</a>. For example, changing the background colour or text size.</p>
 
 
       </div>
