--- a/app/views/index.html
+++ b/app/views/index.html
@@ -34,6 +34,12 @@
         <li><a href="confirmation" class="govuk-link">Application submitted</a></li>
       </ul>
 
+         <h2 class="govuk-heading-s">Other:</h2>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="filter" class="govuk-link">Filter question</a></li>
+        <li><a href="stop" class="govuk-link">Stop screen</a></li>
+      </ul>
+
     <h2 class="govuk-heading-s">Emails:</h2>
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="/email/accepted-email" class="govuk-link">Application accepted</a></li>
