--- a/app/views/start.html
+++ b/app/views/start.html
@@ -53,7 +53,7 @@
         <li>register as a lender to file electronic charge documents</li>
       </ul>
 
-<p>For these, you will need to <a href="https://apply-presenter-prototype-8bf1efc0699b.herokuapp.com/start" class="govuk-link">complete an application form</a>.</p> 
+<p>For these, you will need to <a href="https://www.gov.uk/government/publications/apply-for-a-companies-house-online-filing-presenter-account" class="govuk-link">complete an application form</a>.</p> 
 
 <!--opt2 
 <p>You cannot use this service if you need to file documents with a fee, or file electronic charge documents. For these, you’ll need to <a href="https://apply-presenter-prototype-8bf1efc0699b.herokuapp.com/start" class="govuk-link">complete an application form</a> to apply for a presenter account, or register as a lender.</p> -->
