--- a/app/views/index.html
+++ b/app/views/index.html
@@ -30,7 +30,7 @@
         <li><a href="sign-out" class="govuk-link">Sign out</a></li>
         <li><a href="enter-your-details" class="govuk-link">Enter your details</a></li>
         <li><a href="check-your-answers" class="govuk-link">Check your answers</a></li>
-        <li><a href="generate-new-code#" class="govuk-link">Generate new code?</a></li>
+       <!-- <li><a href="generate-new-code#" class="govuk-link">Generate new code?</a></li>-->
         <li><a href="confirmation" class="govuk-link">Application submitted</a></li>
       </ul>
 
