--- a/app/views/email/rejected-email.html
+++ b/app/views/email/rejected-email.html
@@ -128,7 +128,7 @@
         <tr>
           <td colspan="2">
             <br>
-            <p>Your application for an online presenter filing account has been rejected. There was a problem with the address you provided on your application form. </p>
+            <p>Your application for an online presenter filing account has been rejected. There was a problem with the details you provided on your application form. </p>
 
             <br>
             </td>
