Updated email styling

--- a/app/views/email/accepted-email.html
+++ b/app/views/email/accepted-email.html
@@ -1,3 +1,5 @@
+<!-- THIS IS NOT PRODUCTION READY HTML -->
+
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -107,11 +109,11 @@
             <tr>
               <td width="70" bgcolor="#0b0c0c" valign="middle">
                 <!-- This asset should be hosted by the service -->
-                <a href="/shortcuts" style="text-decoration: none;"><img src="/public/images/logo.svg" alt="" height="32" border="0"></a>
+                <a href="/shortcuts" style="text-decoration: none;"><img src="/public/images/royal-coat-of-arms-white.svg" alt="" height="32" border="0"></a>
               </td>
               <td width="100%" bgcolor="#0b0c0c" valign="middle" align="left">
                 <span style="padding-left: 5px;">
-                  <a href="https://www.gov.uk/government/organisations/companies-house" style="font-family: Helvetica, Arial, sans-serif; font-size: 28px; line-height: 1.315789474; font-weight:700; color: #efefef; text-decoration: none;">GOV.UK</a>
+                  <a href="https://www.gov.uk/government/organisations/companies-house" style="font-family: Helvetica, Arial, sans-serif; font-size: 28px; line-height: 1.315789474; color: #efefef; text-decoration: none;">Companies House</a>
                 </span>
               </td>
             </tr>
@@ -126,57 +128,33 @@
 
         <tr>
           <td colspan="2">
-            <br>
-            <p>Your application for an online filing presenter account has been accepted.  </p>
-            <br>
+
+              <p style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; margin: 35px 0 10px;">Your application for an online filing presenter account has been accepted.  </p>
+ 
             </td>
             </tr>
           <tr>
             <td colspan="2">
-              <p>
-                <h2 class="govuk-heading-m">Your presenter account details</h2>
+  
+                 <h2 style="font-family: Helvetica, Arial, sans-serif; font-size: 24px; line-height: 1.315789474; margin: 15px 0;">Your presenter account details</h2>
 
-                <p>Your presenter ID: <strong>WJ07-555</strong></p>
-                <p>Your presenter code: <strong>444 5365</strong></p>
+                <div style="margin-bottom:25px; padding:3px 15px 15px; background-color:#f8f8f7; border: 1px solid #b7b9bb;">
+                  <p style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; margin: 15px 0 0 0;">Your presenter ID: <strong>WJ07-555</strong></p>
+                  <p style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; margin: 15px 0 0 0;">Your presenter code: <strong>444 5365</strong></p>
 
-                <p>Keep these codes secure and do not share them. You will need them to file online using third-party software. </p>
+                  <p style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; margin: 15px 0 0 0;">Keep these codes secure and do not share them. You will need them to file online using third-party software. </p>
+                </div>
+
+                  <p style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; margin: 15px 0 0 0;">Read our guidance if you need help to find software for filing company documents:<br> <a href="https://www.gov.uk/company-filing-software" style="color: #1d70b8;">https://www.gov.uk/company-filing-software</a>
 
 
-                <p>Read our guidance if you need help to <a href="https://www.gov.uk/company-filing-software" class="govuk-link">find software for filing company documents</a>. 
-
-          <!--      <h3 class="govuk-heading-s">If you need to request a new presenter ID or code</h3>
-
-                <p>You will need to <a href="../start" class="govuk-link">apply for a new online filing presenter account</a>.</p>
--->
-             <!--    <h3 class="govuk-heading-s">Your feedback</h3>
-
-                <p>
-                  <a href="https://www.research.net">What did you think of this service?</a>
-                  (takes 2 minutes)</p> -->
-                <p>
-                  <b>This email was sent from a notification-only email address which cannot accept incoming mail. Please do not reply directly to this message.</b>
+                  <p style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.315789474; color: 	#505a5f; margin: 25px 0 0 0;">This email was sent from a notification-only email address which cannot accept incoming mail. Please do not reply directly to this message.</b>
                 </p>
               </td>
             </tr>
           </table>
         </div>
-        <div class="footer-wrapper">
-          <table class="content content-footer" align="center" cellpadding="0" cellspacing="0" border="0" style="">
-            <tr>
-              <td class="footer-container">
-                <table class="email-footer" width="600" cellpadding="0" cellspacing="0">
-                  <tbody>
-                    <tr>
-                      <td class="content-cell">
-                        &copy; 2021 Companies House
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </td>
-            </tr>
-          </table>
-        </div>
+       
         <!--[if (gte mso 9)|(IE)]> </td> </tr> </table> <![endif]-->
       </body>
     </html>
