--- a/app/views/email/rejected-email.html
+++ b/app/views/email/rejected-email.html
@@ -1,3 +1,6 @@
+<!-- THIS IS NOT PRODUCTION READY HTML -->
+
+
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
@@ -108,11 +111,11 @@
             <tr>
               <td width="70" bgcolor="#0b0c0c" valign="middle">
                 <!-- This asset should be hosted by the service -->
-                <a href="/shortcuts" style="text-decoration: none;"><img src="https://beta.companieshouse.gov.uk/assets/images/govuk-logotype-crown.png" alt="" height="32" border="0"></a>
+                <a href="/shortcuts" style="text-decoration: none;"><img src="/public/images/royal-coat-of-arms-white.svg" alt="" height="32" border="0"></a>
               </td>
               <td width="100%" bgcolor="#0b0c0c" valign="middle" align="left">
                 <span style="padding-left: 5px;">
-                  <a href="https://www.gov.uk/government/organisations/companies-house" style="font-family: Helvetica, Arial, sans-serif; font-size: 28px; line-height: 1.315789474; font-weight:700; color: #efefef; text-decoration: none;">GOV.UK</a>
+                  <a href="https://www.gov.uk/government/organisations/companies-house" style="font-family: Helvetica, Arial, sans-serif; font-size: 28px; line-height: 1.315789474; color: #efefef; text-decoration: none;">Companies House</a>
                 </span>
               </td>
             </tr>
@@ -127,49 +130,29 @@
 
         <tr>
           <td colspan="2">
-            <br>
-            <p>Your application for an online presenter filing account has been rejected. There was a problem with the details you provided on your application. </p>
-
-            <br>
+            <div style="margin:20px 0 25px; padding:3px 15px 3px; background-color:#f8f8f7; border: 1px solid #b7b9bb;">
+                <p style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; margin:15px 0">Your application for an online presenter filing account has been  <span style="font-weight: 700;">rejected</span>.</p>
+                <p style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; margin: 15px 0;"> There was a problem with the details you provided on your application. </p>
+             </div>
             </td>
             </tr>
           <tr>
             <td colspan="2">
-              <p>
-                <h2 class="govuk-heading-m">What to do next</h2>
-                <p>You can <a href="" class="govuk-link">submit a new application</a> if the address you gave was incorrect.</p> 
+                <h2 style="font-family: Helvetica, Arial, sans-serif; font-size: 24px; line-height: 1.315789474; margin: 15px 0;">What to do next</h2>
+                <p style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; margin: 15px 0;">You can submit a new application if the address you gave was incorrect:<br>
+                <a href="" style="color: #1d70b8;">URL of service here</a></p> 
                 
-                <p><a href="" class="govuk-link">Contact Companies House</a> if you have any questions about your application.</p>
-              
+                <p style="font-family: Helvetica, Arial, sans-serif; font-size: 19px; line-height: 1.315789474; margin: 15px 0;">Contact Companies House if you have any questions about your application:<br>
+                <a href="https://www.gov.uk/government/organisations/companies-house#org-contacts" style="color: #1d70b8;">https://www.gov.uk/government/organisations/companies-house#org-contacts</a></p>
 
-
-                <p>
-            <!--      <a href="https://www.research.net">What did you think of this service?</a>
-                  (takes 2 minutes)</p> -->
-                <p>
-                  <b>This email was sent from a notification-only email address which cannot accept incoming mail. Please do not reply directly to this message.</b>
+ 
+                <p style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.315789474; color:	#505a5f; margin: 25px 0;">This email was sent from a notification-only email address which cannot accept incoming mail. Please do not reply directly to this message.</b>
                 </p>
               </td>
             </tr>
           </table>
         </div>
-        <div class="footer-wrapper">
-          <table class="content content-footer" align="center" cellpadding="0" cellspacing="0" border="0" style="">
-            <tr>
-              <td class="footer-container">
-                <table class="email-footer" width="600" cellpadding="0" cellspacing="0">
-                  <tbody>
-                    <tr>
-                      <td class="content-cell">
-                        &copy; 2021 Companies House
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </td>
-            </tr>
-          </table>
-        </div>
+   
         <!--[if (gte mso 9)|(IE)]> </td> </tr> </table> <![endif]-->
       </body>
     </html>
