Updated email titles

--- a/app/views/email/accepted-email.html
+++ b/app/views/email/accepted-email.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta content="telephone=no" name="format-detection">
     <!-- need to add formatting for real phone numbers -->
-    <title>Your confirmation statement for HAPPY HOUSE LTD has been accepted</title>
+    <title>Your application for an online filing presenter account has been accepted - Companies House</title>
     <style>
       html {
         font-size: 19px;
