--- a/app/views/email/rejected-email.html
+++ b/app/views/email/rejected-email.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta content="telephone=no" name="format-detection">
     <!-- need to add formatting for real phone numbers -->
-    <title>Your confirmation statement for HAPPY HOUSE LTD has been rejected</title>
+    <title>Your application for an online presenter filing account has been rejected - Companies House </title>
     <style>
       html {
         font-size: 19px;
